[ENH] Removes GetOpt and makes ArrayElement to be exendable